# cicdpipeline

./: .cursorrules  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  APPEND_ONLY_RECOVERY.md  BUILD_FIX_REPORT.md  CODE_REVIEW_REPORT.md  COMPLETE_CONSTITUTION_ENFORCEMENT_PROMPT.txt  COMPREHENSIVE_CONSTITUTION_INTEGRATION.md  CONSOLIDATION_COMPLETE.md  CONSTITUTION_ENFORCEMENT_PROMPT.md  CONSTITUTION_INTEGRITY_REPORT.md  DATABASE_DESIGN_READINESS_ANALYSIS.md  DETERMINISTIC_ENFORCEMENT_SUMMARY.md  DI_CONFIG_DISCOVERY.md  Development Approach H 2.0.txt  EMPTY_DESCRIPTIONS_RECOMMENDATION.md  EOL_PREVENT_FIRST_IMPLEMENTATION.md  Exception Handling Rules.md  FILE_CONSOLIDATION_RECOMMENDATION.md  FINAL_TRIPLE_VALIDATION_REPORT.md  FIXES_APPLIED_SUMMARY.md  FIX_PIP_HANG.md  GSMD_README_v1.md  HARDCODED_COUNTS_ELIMINATION_VERIFICATION.md  HOW_TO_MANAGE_CONSTITUTION_RULES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_VERIFICATION.md  ISSUES_FIXED_SUMMARY.md  Jenkinsfile  LICENSE  LOCAL_DEPLOYMENT.md  MANIFEST.in  MARKDOWN_FILES_VALIDATION_REPORT.md  MMM_ENGINE_IMPLEMENTATION_CONFIRMATION.md  (+124 more)
.github/: CODEOWNERS
artifacts/: ARCHITECTURAL_ANALYSIS_REPORT.md  COMPREHENSIVE_ARCHITECTURAL_ANALYSIS_2026-01-05.md  DATABASE_STORAGE_ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2026-01-05.md  MARKER_STANDARDIZATION_SUMMARY.md  TEST_CASE_COUNT_REPORT.md  TRIPLE_VALIDATION_REPORT.md  Test_Run_Evidence.md  UNMARKED_TESTS_EXPLANATION.md  marker_dry_run.txt  marker_standardization_dry_run.txt  marker_standardization_dry_run_report.txt  marker_standardization_report.txt  missing_files.txt  module_validation_report.json  remaining_errors.txt  temp_policy.json  test_manifest.json  test_results_all.txt
config/: InfraConfig.d.ts  InfraConfig.d.ts.map  InfraConfig.js  InfraConfig.js.map  InfraConfig.ts  base_config.json  config_manager.py  constitution_config.json  constitution_rules.db  constitution_rules.db-shm  constitution_rules.db-wal  constitution_rules.json  database_schema.sql  enhanced_config_manager.py  extension.json  generate_configs.py  hook_config.json  infra.config.schema.json  migration_history.json  prompt.txt  rule_config_manager.py  rule_loader.py  sync_history.json  test_config.json
coverage/: index.html  lcov.info
database/: __init__.py  models.py
docs/: DI_Config_README.md  DR_RUNBOOK.md  Exception_Handling_Onboarding.md  IMPLEMENTATION_SUMMARY.md  QUERY_REQUIREMENTS.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPLEMENTATION_SUMMARY.md  TRIPLE_VALIDATION_REPORT.md
health_reliability_monitoring/: __init__.py  main.py
scripts/: boundary_check.py  di_config_verify.ps1  run_all_tests.ps1  run_all_tests_no_cache.ps1  run_platform_audit.ps1  verify_observability_layer.py
services/: __init__.py  adapter_registry.py  budget_service.py
src/: __init__.py  configManager.ts  constitutionValidator.ts  decisionPanel.ts  extension.ts  statusBarManager.ts
storage-scripts/: INTEGRATION.md  README_scaffold.md  folder-business-rules.md  scaffold.md
test_reports/: compliance_validation_tests_20251024_114101.json  compliance_validation_tests_20251024_114110.json  comprehensive_rule_specific_tests_20251024_114123.json  comprehensive_test_report_20251024_081555.json  comprehensive_test_report_20251024_084056.json  comprehensive_test_report_20251024_084230.json  comprehensive_test_report_20251024_084336.json  comprehensive_test_report_20251024_092307.json  comprehensive_test_report_20251024_094440.json  comprehensive_test_report_20251024_112709.json  comprehensive_test_report_20251024_112828.json  comprehensive_test_report_20251024_114541.json  comprehensive_test_report_20251024_120011.json  comprehensive_test_report_20251024_120259.json  comprehensive_test_report_20251024_120858.json  comprehensive_test_report_20251024_121906.json  comprehensive_test_report_20251024_122203.json  comprehensive_test_report_20251024_140854.json  comprehensive_test_report_20251024_141256.json  comprehensive_test_report_20251024_141718.json  comprehensive_test_report_20251024_142350.json  comprehensive_test_report_20251024_142653.json  comprehensive_test_report_20251024_142952.json  comprehensive_test_report_20251024_143017.json  comprehensive_test_report_20251024_143340.json  comprehensive_test_report_20251024_143407.json  comprehensive_test_report_20251024_143520.json  comprehensive_test_report_20251024_144406.json  comprehensive_test_report_20251024_145020.json  comprehensive_test_report_20251024_145341.json  comprehensive_test_report_20251024_145623.json  comprehensive_test_report_20251024_145700.json  comprehensive_test_report_20251024_145836.json  comprehensive_test_report_20251024_145855.json  (+48 more)
(+3499 files in other folders)
