[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroui-2.0"
version = "2.0.0"
description = "ZeroUI 2.0 Rule Validation System"
authors = [
    {name = "ZeroUI Team", email = "team@zeroui.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic==2.12.3",
    "pyyaml==6.0.3",
    "jsonschema==4.25.1",
    "ruff==0.14.1",
    "black==25.9.0",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "gitpython==3.1.45",
    "jinja2==3.1.6",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.32.4.20250913",
    "pre-commit==4.3.0",
    "psutil==7.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.14.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "S101", "PLR2004", "S106", "S108"]

[tool.ruff.isort]
known-first-party = ["config", "validator", "src"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.pytest.ini_options]
testpaths = ["validator/rules/tests","gsmd/gsmd/modules","tests/foundation"]
addopts = "-q"
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
# Pytest can run unittest tests natively
# No need to change existing unittest code
markers = [
    "unit: marks tests as unit tests (fast, pure functions)",
    "integration: marks tests as integration tests (I/O, process boundaries)",
    "smoke: marks tests as smoke tests (wiring sanity)",
    "slow: marks tests as slow (opt-in only)",
    "unittest: marks tests using unittest framework (legacy style)",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# Enable unittest compatibility (pytest runs unittest tests natively)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "yaml.*",
    "jsonschema.*",
    "git.*",
    "jinja2.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["config", "validator"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
